--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 <title>香風雪貓網站【首頁】</title>
 </head>
 <body>
+<style>
+<!--
+A{text-decoration:none}
+-->
+</style>
 
-<form action="admin.html">
-管理員密碼<br>
-<input type="text" name="firstname" value="">
-<br>
-<br><br>
-<input type="submit" value="Submit">
-</form> 
+
+<font size="7"><p style="text-align:center"><span style="color:#000000">香風雪貓公告區 </span></font></p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
+
+<span style="color:#000000">&nbsp </span><p style="text-align:center"><span style="color:#000000"><hr></hr></p>
+<p style="text-align:center"><span style="color:#000000"><font size="6"><a href="./test.html">【公告】官方專用測試公告串</a></p></span></font>
 
 </body>
 </html>
