--- a/index.html
+++ b/index.html
@@ -5,6 +5,51 @@
 <link rel="Shortcut Icon" type="image/x-icon" href="icon.png" />
 <meta name="description" content="網站製作中">
 <meta name="keywords" content="香風雪貓">
+<style>
+.BorderOn  { width:90px;
+             margin-left:10px;
+             border:1px solid #456789 }
+.BorderOff { width:90px;
+             margin-left:0px;
+             border:1px solid #444444 }
+A.mBlue:link      {color:#00CCFF; text-decoration:none;}
+A.mBlue:visited   {color:#00CCFF; text-decoration:none;}
+A.mBlue:active    {color:#00CCFF; text-decoration:none;}
+A.mBlue:hover     {color:#FF0000; text-decoration:underline;}        
+A.mGreen:link     {color:#00FF80; text-decoration:none;}
+A.mGreen:visited  {color:#00FF80; text-decoration:none;}
+A.mGreen:active   {color:#00FF80; text-decoration:none;}
+A.mGreen:hover    {color:#FF0000; text-decoration:underline;} 
+A.mYellow:link    {color:#FFFF00; text-decoration:none;}
+A.mYellow:visited {color:#FFFF00; text-decoration:none;}
+A.mYellow:active  {color:#FFFF00; text-decoration:none;}
+A.mYellow:hover   {color:#FF0000; text-decoration:underline;}          
+</style>
+<script language="JavaScript1.2">
+offMessage = "把滑鼠放在選單上面"
+function boxOn(which,message) {
+if (document.all||document.getElementById) {
+which.className = 'BorderOn';
+if (document.getElementById) {
+document.getElementById("Message").innerHTML = message
+}
+else {
+Message.innerHTML = message;
+      }
+   }
+}
+function boxOff(which) {
+if (document.all||document.getElementById) {
+which.className = 'BorderOff';
+if (document.getElementById) {
+document.getElementById("Message").innerHTML = offMessage
+}
+else {
+Message.innerHTML = offMessage;
+      }
+   }
+}
+</script>
 
 <title>香風雪貓網站【首頁】</title>
 </head>
@@ -14,6 +59,29 @@
 A{text-decoration:none}
 -->
 </style>
+
+<SCRIPT LANGUAGE="JAVASCRIPT">
+<!-- Begin
+
+n = (document.layers) ? 1:0
+ie = (document.all) ? 1:0
+function play_sound() {
+    if (n) document.thesound.play(false)
+    if (ie) {
+        document.thesound.stop()
+        document.thesound.play()
+    }
+}
+function stop_sound() {
+    document.thesound.stop()
+}
+
+// End -->
+</SCRIPT>
+
+
+<EMBED SRC="music.mp3" HIDDEN=true AUTOSTART="true" MASTERSOUND NAME="thesound">
+
 
 <script language="Javascript">
 
@@ -86,10 +154,10 @@ moveback(1,1,0,0, background);
 </script>
 
 
-<font size="7"><p style="text-align:center"><span style="color:#ffffff">香風雪貓公告區 </span></font></p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
+<font size="7"><p style="text-align:center"><span style="color:#000000">香風雪貓公告區 </span></font></p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
 
 <span style="color:#000000">&nbsp </span><p style="text-align:center"><span style="color:#000000"><hr></hr></p>
-<p style="text-align:center"><span style="color:#000000"><font size="6"><a href="./test.html">【公告】官方專用測試公告串</a></p></span></font>
+<p style="text-align:center"><span style="color:#000000"><font size="6"><a href="./giveme.html">【公告】送我第五人格的東西w</a></p></span></font>
 
 
 </body>
