--- a/giveme.html
+++ b/giveme.html
@@ -36,7 +36,7 @@ function stop_sound() {
 </SCRIPT>
 
 
-<EMBED SRC="mu.wav" HIDDEN=true AUTOSTART="true" MASTERSOUND NAME="thesound">
+<EMBED SRC="mu.mp3" HIDDEN=true AUTOSTART="true" MASTERSOUND NAME="thesound">
 
 
 <script language="Javascript">
