--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="Shortcut Icon" type="image/x-icon" href="icon.png" />
 <meta name="description" content="網站製作中">
 <meta name="keywords" content="香風雪貓">
+ <link rel="Shortcut Icon" type="image/x-icon" href="png.png" />
 <style>
 .BorderOn  { width:90px;
              margin-left:10px;
@@ -157,8 +158,12 @@ moveback(1,1,0,0, background);
 <font size="7"><p style="text-align:center"><span style="color:#000000">香風雪貓公告區 </span></font></p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
 
 <span style="color:#000000">&nbsp </span><p style="text-align:center"><span style="color:#000000"><hr></hr></p>
-<p style="text-align:center"><span style="color:#000000"><font size="6"><a href="./giveme.html">【公告】送我第五人格的東西w</a></p></span></font>
-
+<p style="text-align:center"><span style="color:#000000"><font size="6"><a href="./giveme.html">【公告】送我第五人格的東西w</a></p></span></font><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
+<p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
+<p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
+<p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
+<p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
+<hr>&nbsp </hr><font size="7"><p style="text-align:center"><span style="color:#000000"><a href="cc.html">版權所有</a></span></font></p>
 
 </body>
 </html>
