--- a/giveme.html
+++ b/giveme.html
@@ -114,7 +114,7 @@ moveback(1,1,0,0, background);
 <span style="color:#000000">&nbsp </span><p style="text-align:center"><span style="color:#000000"><hr></hr></p>
 
 
-<font size="4"><p style="text-align:center"><span style="color:#000000">如果要送第五人格的東西必須有回音(儲值)<b>目前我需要 黃衣之主角色 攝影師約瑟夫的亞茲拉爾時裝以及星見裝飾品 廠長的園丁布偶 機械師角色 先知角色</b></span></font></p>
+<font size="4"><p style="text-align:center"><span style="color:#000000">如果要送第五人格的東西必須有回音(儲值)<b>目前我需要 攝影師約瑟夫的亞茲拉爾時裝以及星見裝飾品 廠長的園丁布偶 機械師角色 瘋眼角色 傑克角色 要送的話請+夜娜Yana (第五人格的名稱)並附註想送我東西</b></span></font></p>
 
 <p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
 <p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
