--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ moveback(1,1,0,0, background);
 <font size="7"><p style="text-align:center"><span style="color:#000000">香風雪貓公告區 </span></font></p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
 
 <span style="color:#000000">&nbsp </span><p style="text-align:center"><span style="color:#000000"><hr></hr></p>
-<p style="text-align:center"><span style="color:#000000"><font size="6"><a href="./giveme.html">【公告】送我第五人格的東西w</a></p></span></font><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
+<p style="text-align:center"><span style="color:#000000"><font size="6"><a href="./server.html">【公告】伺服器將於20191/1/18 發布</a></p></span></font><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
 <p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
 <p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
 <p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
