--- a/index.html
+++ b/index.html
@@ -16,159 +16,35 @@
 A.mBlue:link      {color:#00CCFF; text-decoration:none;}
 A.mBlue:visited   {color:#00CCFF; text-decoration:none;}
 A.mBlue:active    {color:#00CCFF; text-decoration:none;}
-A.mBlue:hover     {color:#FF0000; text-decoration:underline;}        
+A.mBlue:hover     {color:#FF0000; text-decoration:underline;}
 A.mGreen:link     {color:#00FF80; text-decoration:none;}
 A.mGreen:visited  {color:#00FF80; text-decoration:none;}
 A.mGreen:active   {color:#00FF80; text-decoration:none;}
-A.mGreen:hover    {color:#FF0000; text-decoration:underline;} 
+A.mGreen:hover    {color:#FF0000; text-decoration:underline;}
 A.mYellow:link    {color:#FFFF00; text-decoration:none;}
 A.mYellow:visited {color:#FFFF00; text-decoration:none;}
 A.mYellow:active  {color:#FFFF00; text-decoration:none;}
-A.mYellow:hover   {color:#FF0000; text-decoration:underline;}          
+A.mYellow:hover   {color:#FF0000; text-decoration:underline;}
 </style>
-<script language="JavaScript1.2">
-offMessage = "把滑鼠放在選單上面"
-function boxOn(which,message) {
-if (document.all||document.getElementById) {
-which.className = 'BorderOn';
-if (document.getElementById) {
-document.getElementById("Message").innerHTML = message
-}
-else {
-Message.innerHTML = message;
-      }
-   }
-}
-function boxOff(which) {
-if (document.all||document.getElementById) {
-which.className = 'BorderOff';
-if (document.getElementById) {
-document.getElementById("Message").innerHTML = offMessage
-}
-else {
-Message.innerHTML = offMessage;
-      }
-   }
-}
+<script src="js/1.js">
 </script>
 
 <title>香風雪貓網站【首頁】</title>
 </head>
-<body background="https://truth.bahamut.com.tw/s01/201612/0902c8ddec4ee1859985a67d5985e830.JPG">
+<body>
 <style>
 <!--
 A{text-decoration:none}
 -->
 </style>
 
-<SCRIPT LANGUAGE="JAVASCRIPT">
-<!-- Begin
-
-n = (document.layers) ? 1:0
-ie = (document.all) ? 1:0
-function play_sound() {
-    if (n) document.thesound.play(false)
-    if (ie) {
-        document.thesound.stop()
-        document.thesound.play()
-    }
-}
-function stop_sound() {
-    document.thesound.stop()
-}
-
-// End -->
-</SCRIPT>
-
-
+<p style="text-align:center"><span>&nbsp </span></p>
+<p style="text-align:center"><span>&nbsp </span></p>
+<p style="text-align:center"><span>&nbsp </span></p>
+<font size="5"><p style="text-align:center"><span color="#FFFFFF">網站重整中</p></span></font>
+<script src="js/2.js"></script>
 <EMBED SRC="music.mp3" HIDDEN=true AUTOSTART="true" MASTERSOUND NAME="thesound">
-
-
-<script language="Javascript">
-
-<!--
-
-var background = "png.PNG";
-
-var speed = 0;
-
-
-browserName = navigator.appName;
-
-browserVer = parseInt(navigator.appVersion);
-
-
-if (browserName != "Netscape" || browserVer >= 4.5) {
-
-
-function moveback(movert,movedn,hPos,vPos) {
-
- 
-  if (arguments[4])
-
-    document.body.style.backgroundImage = "url(\"" + arguments[4] + "\")";
-
- 
-
-  if (arguments[5])
-
-    document.body.style.backgroundRepeat = arguments[5]
-
- 
-
-  if (!isNaN(hPos)) {
-
-    if ((movert!=0) && (hPos>0)) hPos=-100000
-
-    hPos += movert
-
-  } 
-
-  if (!isNaN(vPos)) {
-
-    if ((movedn!=0) && (vPos>0)) vPos=-100000
-
-    vPos+= movedn
-
-  }
-
- 
-
-  document.body.style.backgroundPosition= hPos + " " + vPos
-
-  if (isNaN(hPos))  hPos = "\"" + hPos + "\""
-
-  if (isNaN(vPos)) vPos = "\"" + vPos + "\""
-
-setTimeout("moveback("+movert+","+movedn+","+hPos+","+vPos+")",speed)
-
-}
-
-
-moveback(1,1,0,0, background);
-
-}
-
-
-//-->
-
-</script>
-
-
-<font size="7"><p style="text-align:center"><span style="color:#000000">香風雪貓公告區 </span></font></p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
-
-<span style="color:#000000">&nbsp </span><p style="text-align:center"><span style="color:#000000"><hr></hr></p>
-<p style="text-align:center"><span style="color:#000000"><font size="6"><a href="./server.html">【公告】伺服器將於20191/1/18 發布</a></p></span></font><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
-<p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
-<p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
-<p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
-<p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p><p style="text-align:center"><span style="color:#000000">&nbsp </span><p>
-<hr>&nbsp </hr><font size="7"><p style="text-align:center"><span style="color:#000000"><a href="cc.html">版權所有</a></span></font></p>
-
 
 
 </body>
 </html>
-
-
-
