--- a/service.html
+++ b/service.html
@@ -29,7 +29,7 @@ A.mYellow:hover   {color:#FF0000; text-decoration:underline;}
 <script src="js/1.js">
 </script>
 
-<title>香風雪貓網站【首頁】</title>
+<title>香風雪貓網站【客服中心】</title>
 </head>
 <body bgcolor="#000000">
 
@@ -39,29 +39,9 @@ A{text-decoration:none}
 -->
 </style>
 
-<p style="text-align:center"><font size="8"><span style="color:#F9D0FF"><strong>香風雪貓的小窩</p></span></font></strong>
-<p style="text-align:center"><font size="6"><span style="color:#FAB200"><strong>
-<a href="announce.html">公告&nbsp </a>
-|&nbsp
-<a href="video.html">YouTube影片</a>
-&nbsp|&nbsp <a href="service.html">網站服務</a>
-</p></span></font></strong>
-<hr></hr>
-<p style="text-align:center"><span>&nbsp </span></p>
-<p style="text-align:center"><span>&nbsp </span></p>
-<p style="text-align:center"><span style="color:#ffffff"><strong><font size="6">我的個人網站來逛逛吧~
-</p></font></strong></span>
+<p style="text-align:center"><font size="8"><span style="color:#F9D0FF"><strong><a href="index.html">香風雪貓的小窩
+</a></p></span></font></strong>
 
-<p style="text-align:center"><span style="color:#00FADC"><strong><font size="6">看到這個網站的同時 麻煩到YouTube幫我訂閱+點讚影片
-</p></font></strong></span>
-
-<p style="text-align:center"><img src="DC.png"><img src="yt.png">
-</img></p>
-
-<p style="text-align:center"><span style="color:#FAB200"><strong><a href="https://discord.gg/X4gUBeZ"><font size="5">Discord群組</a>&nbsp|&nbsp<a href="https://www.youtube.com/channel/UCy8SwLpqt61kYo-xAXLs5ZA">Youtube頻道</a></p></span></strong></font>
-<script src="js/2.js"></script>
-
-<EMBED SRC="music.mp3" HIDDEN=true AUTOSTART="true" MASTERSOUND NAME="thesound">
 
 
 </body>
