--- a/video.html
+++ b/video.html
@@ -3,8 +3,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="pragma" content="no-cache">
 <link rel="Shortcut Icon" type="image/x-icon" href="icon.png" />
-<meta name="description" content="­»­·³·¿ßªº­Ó¤Hºô¯¸¡AÅwªï¥úÅU">
-<meta name="keywords" content="­»­·³·¿ß">
+<meta name="description" content="é¦™é¢¨é›ªè²“çš„å€‹äººç¶²ç«™ï¼Œæ­¡è¿å…‰é¡§">
+<meta name="keywords" content="é¦™é¢¨é›ªè²“">
  <link rel="Shortcut Icon" type="image/x-icon" href="png.png" />
 <style>
 .BorderOn  { width:90px;
@@ -29,7 +29,7 @@ A.mYellow:hover   {color:#FF0000; text-decoration:underline;}
 <script src="js/1.js">
 </script>
 
-<title>­»­·³·¿ßºô¯¸¡i«ÈªA¤¤¤ß¡j</title>
+<title>é¦™é¢¨é›ªè²“ç¶²ç«™ã€ç¶²ç«™æœå‹™ã€‘</title>
 </head>
 <body bgcolor="#000000">
 
@@ -39,7 +39,7 @@ A{text-decoration:none}
 -->
 </style>
 
-<p style="text-align:center"><font size="8"><span style="color:#F9D0FF"><strong><a href="index.html">­»­·³·¿ßªº¤pºÛ
+<p style="text-align:center"><font size="8"><span style="color:#F9D0FF"><strong><a href="index.html">é¦™é¢¨é›ªè²“çš„å°çª©
 </a></p></span></font></strong>
 
 
