--- a/announce.html
+++ b/announce.html
@@ -29,7 +29,7 @@ A.mYellow:hover   {color:#FF0000; text-decoration:underline;}
 <script src="js/1.js">
 </script>
 
-<title>香風雪貓網站【客服中心】</title>
+<title>香風雪貓網站【公告】</title>
 </head>
 <body bgcolor="#000000">
 
